0.1689
    - added EXPERIMENTAL available_data_type
    - simplified type_rule
    - changed type_rule arguments format.
0.1688
    - fixed bug that model insert, update, delete select can't
      odd number arguments
    - improved type_rule method
0.1687
    - added EXPERIMENTAL type_rule method
    - added EXPERIMENTAL execute() type_rule_off option
    - execute method can second argument as parameter
0.1686
    - select() column option can receive array reference in array.
      This is EXPERIMENTAL
    - select() EXPERIMETNAL column option hash format
      return table.column, not table__column
    - added EXPERIMENTAL col method.
    - set reserved_word_quote automatically from driver name
0.1685
    - insert_at, update_at, delete_at, select_at is DEPRECATED!
      use insert, update, delete, select method and id option.
    - insert, insert_at, update, update_at can receive odd number arguments,
      first one is parameter.
0.1684
    - added DBIx::Custom::Result all method, this is alias for fetch_hash_all
    - added DBIx::Custom::Result one method, this is alias for fetch_hash_first
    - DBIx::Custom::Result fetch_hash_first can recieve argument
    - select() column option can receive hash reference. This is EXPERIMENTAL
    - update_param_tag is DEPRECATED! use update_param instead.
    - insert_param_tag is DEPRECATED! use insert_param instead.
    - assing_param_tag is DEPRECATED! use assign_param instead.
    - Tag system such as {? title}, {= title} is DEPRECATED!
      and added paramter system such as :title.
0.1683
    - data_source is DEPRECATED! It is renamed to dsn
0.1682
    - improved debug message
    - fixed merge_param bug
0.1681
    - added EXPERIMENTAL assign_tag() method
0.1680
    - DEPRECATED select() param option, this is renamed to where_param
    - added select(), update(), and delete() where_param option
0.1679
    - added EXPERIMENTAL select() wrap option to support Oracle ROWNUM
0.1678