@@ -2684,4 +2684,41 @@ $dbi->insert({key1 => 2}, table => 'table1', type_rule_off => 1);
 $result = $dbi->select(table => 'table1', type_rule_off => 1);
 is($result->one->{key1}, 2);
 
+
+test 'result_filter';
+$dbi = DBIx::Custom->connect($NEW_ARGS->{0});
+$dbi->execute($CREATE_TABLE->{0});
+$dbi->execute($CREATE_TABLE->{2});
+
+$dbi->create_model(
+    table => 'table1',
+    join => [
+       'left outer join table2 on table1.key1 = table2.key1'
+    ],
+    primary_key => ['key1'],
+    result_filter => {
+        key1 => sub { $_[0] * 2 }
+    }
+);
+$model2 = $dbi->create_model(
+    table => 'table2',
+    result_filter => [
+        [qw/key1 key3/] => sub { $_[0] * 3 }
+    ]
+);
+$dbi->setup_model;
+$dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
+$dbi->insert(table => 'table2', param => {key1 => 1, key3 => 3});
+$model = $dbi->model('table1');
+$result = $model->select(
+    column => [
+        $model->mycolumn,
+        {table2 => [qw/key1 key3/]}
+    ],
+    where => {'table1.key1' => 1}
+);
+is_deeply($result->one,
+          {key1 => 2, key2 => 2, 'table2.key1' => 3, 'table2.key3' => 9});
+is_deeply($model2->select->one, {key1 => 3, key3 => 9});
+
 =cut
